<resources>
    <string name="app_name">BooDroid</string>
    <string name="host_addr_label">Host Address</string>
    <string name="host_hint">IP Address</string>
    <string name="add_button">Add Host</string>
    <string name="src_type_label">Source</string>
    <string name="src_db">All</string>
    <string name="src_listed">Listed</string>
    <string name="src_selected">Selected</string>
    <string name="rating_label">Rating</string>
    <string name="mark_label">Mark</string>
    <string name="category_label">Category</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="seekTop">Seek to start</string>
    <string name="theme_type_label">Theme</string>
    <string name="theme_system">System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="color_variation_label">Color Variation</string>
    <string name="color_pink">Pink</string>
    <string name="color_green">Green</string>
    <string name="color_blue">Blue</string>
    <string name="color_purple">Purple</string>
    <string name="channel_name">BooChannel</string>
    <string name="channel_description">BooDroid Running Wild</string>
    <string name="confirm_remove_host">Removing the host from list.</string>
    <string name="confirm_close_on_editing_host">Editing host is not registered.</string>
    <string name="confirm_close_with_no_host">No hosts are registered.</string>
    <string name="no_host">NO HOSTS</string>
    <string name="host_name_label">Name</string>
    <string name="name_hint">any name</string>
    <string name="host_address_label">Address</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="host_label">Host</string>
    <string name="select_host">Select Host</string>
    <string name="add_arrow"><![CDATA[Add >]]></string>
    <string name="del_arrow"><![CDATA[< Del]]></string>
    <string name="clear_all">Clear All</string>
    <string name="add_arrow_v">▼ Add</string>
    <string name="del_arrow_v">Del ▲</string>
    <string name="source_list">Source</string>
    <string name="target_list">Download List</string>
    <string name="reset">Reset</string>
    <string name="source_list_label">Source Videos</string>
    <string name="target_list_label">Offline Videos</string>
    <string name="query_enter_offline_mode">Enter Offline Mode?</string>
    <!--    <string name="menu_item_enter_offline_mode">Enter Offline Mode</string>-->
    <!--    <string name="menu_item_exit_offline_mode">Exit Offline Mode</string>-->
    <!--    <string name="menu_item_setup_offline_mode">Setup Offline Mode</string>-->
    <!--    <string name="menu_item_select_offline_videos">Select Offline Videos</string>-->
    <string name="select_all">Select All</string>
    <string name="unselect_all">Unselect All</string>
    <string name="enable_filter">Enable Filter</string>
    <string name="select_video_label">Select videos to play.</string>
    <string name="enable_offline_mode">Offline Mode</string>
    <string name="total_size_label">Total Size</string>
    <string name="total_time_label">Total Time</string>
    <string name="offline_empty_list">Play list is empty in offline mode.</string>
    <string name="password">Password</string>
    <string name="password_hint">Input your password.</string>
    <string name="showTitleOnScreen">Show movie title on the screen</string>
    <string name="show_title_on_screen">Show movie title on the screen</string>
    <string name="use_dynamic_color">Use Dynamic Color</string>
    <string name="save_as_file">Save As</string>
    <string name="wallpaper_lock_screen">Lock Screen</string>
    <string name="wallpaper_home_screen">Home Screen</string>
    <string name="host_setting">Hosts</string>
    <string name="preferences">Preferences</string>
    <string name="day_night_hint"><![CDATA[Day&Night]]></string>
    <string name="color_contrast_hint">Color Contrast</string>
    <string name="theme_hint">Theme</string>
    <string name="skipNext">Next Media</string>
    <string name="set_clop_hint">Set Crop Hint</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="color_variation_title">Color Variation</string>
    <string name="slide_interval_title">Slide Interval (sec.)</string>
    <string name="player_text">Player</string>
    <string name="file">File</string>
    <string name="sync_selection_label">Sync Item Selection</string>
    <string name="loop_playback">Loop Playback</string>
    <string name="offline">Offline</string>
    <string name="offline_label">Offline</string>
    <string name="discovered_servers_label">Discovered on this network</string>
    <string name="no_servers_discovered">Not Found</string>
    <string name="prefer_audio">Prefer Audio</string>
    <string name="flip_camera">Flip Camera</string>
    <string name="discover_servers">Discover</string>
    <string name="use_https">Use HTTPS</string>

</resources>