<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingVertical="20dp"
    android:paddingHorizontal="40dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/file"
        android:textStyle="bold"
        />
    <CheckBox
        android:id="@+id/save_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_as_file"
        />
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:background="?attr/colorOutline"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallpaper"
        android:textStyle="bold"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/use_crop_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_clop_hint"
        />

    <CheckBox
        android:id="@+id/lock_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallpaper_lock_screen"
        />
    <CheckBox
        android:id="@+id/home_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wallpaper_home_screen"
        />

</LinearLayout>