<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/enable_offline_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable_offline_mode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/source_list_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/source_list_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enable_offline_mode"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/target_list_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/target_list_label"
        app:layout_constraintStart_toStartOf="@id/target_list"
        app:layout_constraintTop_toBottomOf="@+id/enable_offline_mode"
        android:textStyle="bold"
        />

<!--    <Button-->
<!--        android:id="@+id/select_host_button"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/checkbox_offline_mode"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        android:text="@string/select_host"-->
<!--        android:textAllCaps="false"-->
<!--        />-->

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/enable_offline_mode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/source_list"
        app:layout_constraintEnd_toStartOf="@+id/target_list"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        >
        <Button
            android:id="@+id/add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_arrow"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/del_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/del_arrow"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/reset_selection_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textAllCaps="false"
            />
        <Button
            android:id="@+id/clear_target_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear_all"
            android:textAllCaps="false"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/source_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/source_list_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttons"
        android:background="@drawable/bordered_bg"
        android:padding="1dp"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/target_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/source_list_label"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/bordered_bg"
        android:padding="1dp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>