<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_text"
        android:textStyle="bold"
        />
    <CheckBox
        android:id="@+id/show_title_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_title_on_screen"
        android:layout_marginHorizontal="20dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slide_interval_title"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:labelFor="@id/slide_interval_input"
        />
    <EditText
        android:id="@+id/slide_interval_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:digits="0123456789"
        android:layout_marginHorizontal="20dp"
        android:importantForAutofill="no"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_variation_title"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/day_night_mode_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/day_night_hint"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        >
        <AutoCompleteTextView
            android:id="@+id/day_night_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            android:saveEnabled="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/color_contrast_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/color_contrast_hint"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        >
        <AutoCompleteTextView
            android:id="@+id/color_contrast_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            android:saveEnabled="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/theme_container"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/theme_hint"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        >
        <AutoCompleteTextView
            android:id="@+id/theme_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:focusable="false"
            android:saveEnabled="false"
            />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>