<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <LinearLayout
        android:id="@+id/host_addr_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:id="@+id/host_addr_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/host_addr_label"
            android:layout_gravity="center_vertical"
            />

<!--        <EditText-->
<!--            android:id="@+id/host_addr_edit"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_column="1"-->
<!--            android:layout_columnWeight="1"-->
<!--            android:inputType="textUri"-->
<!--            android:imeOptions="actionDone"-->
<!--            tools:text="192.168.0.10:3500"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:hint="@string/host_hint"-->
<!--            android:autofillHints="@string/host_hint"-->
<!--            />-->

        <ImageButton
            android:id="@+id/add_to_list_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:textAllCaps="false"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            android:insetLeft="4dp"
            android:src="@drawable/ic_plus"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/add_button"
            app:tint="?attr/colorPrimaryVariant" />
    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/host_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="150dp"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="5dp"
        android:background="@drawable/bordered_bg"
        android:paddingHorizontal="5dp"
        />

    <TextView
        android:id="@+id/empty_list_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_host"
        android:layout_gravity="center"
        />
    </FrameLayout>


    <TextView
        android:id="@+id/source_type_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/setting_spacing"
        android:text="@string/src_type_label"
        android:minWidth="@dimen/min_label_width"
        android:layout_gravity="center_vertical"
        />
    <RadioGroup
        android:id="@+id/source_type_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/chk_src_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/src_db"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/chk_src_listed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/src_listed"
            />
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/chk_src_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/src_selected"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/rating_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/source_type_selector"
        android:layout_marginTop="@dimen/setting_spacing"
        android:text="@string/rating_label"
        android:layout_gravity="center_vertical"
        android:minWidth="@dimen/min_label_width"
        />
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/rating_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/tg_rating_dreadful"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/min_toggle_button_width"
            app:iconPadding="0dp"/>
        <Button
            android:id="@+id/tg_rating_bad"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/min_toggle_button_width"
            app:icon="@drawable/ic_bad"
            app:iconPadding="0dp"/>
        <Button
            android:id="@+id/tg_rating_normal"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/min_toggle_button_width"
            app:icon="@drawable/ic_normal"
            app:iconPadding="0dp"/>
        <Button
            android:id="@+id/tg_rating_good"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/min_toggle_button_width"
            app:icon="@drawable/ic_good"
            app:iconPadding="0dp"/>
        <Button
            android:id="@+id/tg_rating_excellent"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/min_toggle_button_width"
            app:icon="@drawable/ic_star"
            app:iconPadding="0dp"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/mark_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/setting_spacing"
        android:text="@string/mark_label"
        android:layout_gravity="center_vertical"
        android:minWidth="@dimen/min_label_width"
        />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/mark_selector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/tg_mark_star"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/min_toggle_button_width"
            app:icon="@drawable/ic_star"
            app:iconPadding="0dp"/>
        <Button
            android:id="@+id/tg_mark_flag"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/min_toggle_button_width"
            app:icon="@drawable/ic_flag"
            app:iconPadding="0dp"/>
        <Button
            android:id="@+id/tg_mark_heart"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/min_toggle_button_width"
            app:icon="@drawable/ic_heart"
            app:iconPadding="0dp"
            />
    </com.google.android.material.button.MaterialButtonToggleGroup>


    <TextView
        android:id="@+id/category_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mark_selector"
        android:layout_marginTop="@dimen/setting_spacing"
        android:text="@string/category_label"
        android:layout_gravity="center_vertical"
        android:minWidth="@dimen/min_label_width"
        />
    <Button
        android:id="@+id/category_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="10"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:textAllCaps="false"
        android:textAlignment="center"
        android:textColor="?attr/colorPrimaryDark"
        tools:text="All"
        />

    <CheckBox
        android:id="@+id/show_title_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_title_on_screen"
        />

</LinearLayout>

